tests/tooling/fixtures/native/recovery/negative/negative_octal_literal_parser_invalid_literal.objc3
// Expected diagnostic code(s): O3P103.
module NegativeOctalLiteralParserInvalidLiteral;

let value = 0o;

fn main() -> i32 {
  return 0;
}
